fix: [PIE-5047]: fix drag & drop, UI issues in files and patterns (#10774)
* fix: [PIE-5047]: fix drag & drop, UI issues in files and patterns

* fix: [PIE-5047]: fix horizontal scroll

--- a/src/modules/75-cd/components/PipelineSteps/CommandScripts/Commands/CommandEdit.module.scss
+++ b/src/modules/75-cd/components/PipelineSteps/CommandScripts/Commands/CommandEdit.module.scss
@@ -7,7 +7,7 @@
 
 .commandUnitForm {
   height: 636px;
-  overflow: scroll;
+  overflow: auto;
   margin-left: var(--spacing-xsmall);
 
   :global {
