--- a/src/modules/75-cd/components/PipelineSteps/CommandScripts/Commands/TailFilesEdit.module.scss
+++ b/src/modules/75-cd/components/PipelineSteps/CommandScripts/Commands/TailFilesEdit.module.scss
@@ -32,7 +32,7 @@
 
 .header {
   display: grid !important;
-  grid-template-columns: 40px 2.5fr 2.5fr 30px;
+  grid-template-columns: auto 1fr 1fr auto;
   column-gap: var(--spacing-small);
   margin-bottom: var(--spacing-small) !important;
   align-items: center;
@@ -57,7 +57,7 @@
 
 .row {
   font-weight: normal;
-  align-items: baseline;
+  align-items: start;
 }
 
 .addButton {
